<resources>
    <string name="app_name">GO SOPT Android</string>
    <string name="etv_pwd">비밀번호를 입력하세요</string>
    <string name="btn_login">LOGIN</string>
    <string name="tv_pwd_title">PWD</string>
    <string name="etv_id">아이디를 입력하세요</string>
    <string name="tv_id_title">ID</string>
    <string name="etv_specialty">특기를 입력하세요</string>
    <string name="btn_sign">회원가입</string>
    <string name="tv_specialty">특기</string>
    <string name="etv_name">아름을 입력하세요</string>
    <string name="tv_name">이름</string>
    <string name="tv_logout">로그아웃</string>
    <string name="tv_login">로그인/\n마이페이지</string>
    <string name="tv_signup">SIGNUP</string>
    <string name="login_success">로그인 성공</string>
    <string name="login_fail">로그인 실패</string>
    <string name="join_success">회원가입완료</string>
    <string name="home">홈</string>
    <string name="gallery">갤러리</string>
    <string name="search">검색</string>
    <string name="my_page">My</string>
    <string name="ok">확인</string>
    <string name="cancel">취소</string>
    <string name="logout_comment">로그아웃 하시나요?</string>
</resources>