<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lo_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="30dp"
    tools:context=".ui.login.LoginActivity">

    <TextView
        android:id="@+id/tv_login_title"
        style="@style/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:text="Welcome to GO Android !"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_id_title"
        style="@style/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/tv_id_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_title" />

    <EditText
        android:id="@+id/etv_id"
        style="@style/edit.base"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/etv_id"
        android:imeOptions="actionNext"
        app:layout_constraintTop_toBottomOf="@+id/tv_id_title" />

    <TextView
        android:id="@+id/tv_pwd_title"
        style="@style/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/tv_pwd_title"
        app:layout_constraintTop_toBottomOf="@+id/etv_id" />

    <EditText
        android:id="@+id/etv_pwd_check"
        style="@style/edit.pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/etv_pwd"
        android:imeOptions="actionDone"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_pwd_title" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/black"
        android:text="@string/btn_login"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/etv_pwd_check" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_join"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/black"
        android:text="SIGN UP"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/btn_login" />

</androidx.constraintlayout.widget.ConstraintLayout>